BUG/ENH: make form easiler-ly seen when scrolling down, fix transition states, banner should be visible at top 2px at all times

--- a/be/proj/static/css/base.scss
+++ b/be/proj/static/css/base.scss
@@ -77,7 +77,7 @@ $rule:      desaturate(lighten($mid-grey, 20%), 30%);
 }
 
 @mixin frame-transition(){
-  @include transition(all, 1s, ease);
+  @include transition(all, .75s, ease);
 }
 
 @mixin bottom-nav-colors() {
@@ -335,11 +335,6 @@ body {
   top: 200;
 }
 
-.banner.fadeIn {
-  opacity: 1;
-  top: $header-height;
-}
-
 #scroll.mainstate {
   .social-media {
     opacity: 0;
@@ -377,9 +372,21 @@ section {
 $banner-height: 32px;
 .banner {
   @include frame-transition();
-  z-index: 999999;
+  z-index: 9999990;
+  font-family: "Cutive mono";
+  position: fixed;
+  width: 100%;
+  height: 88px;
+  top: 2px;
+  font-size: 18px;
+
+  &.fadeIn,
+  &:hover {
+    top: $header-height;
+  }
+
   .text {
-    background-color: rgba(109,15,21,.65);
+    background-color: rgba(63,31,48,.80);
     height: $banner-height;
     text-align: center;
     margin: auto;
@@ -388,25 +395,6 @@ $banner-height: 32px;
 
   a {
     color: #ccaa2d;
-  }
-
-  font-family: "Cutive mono";
-  opacity: 0;
-  position: fixed;
-  width: 100%;
-  height: 88px;
-  top: 0;
-  font-size: 18px;
-
-  &.openable {
-    opacity: 0 !important;
-    top: 0px !important;
-
-    &:hover {
-      top: $banner-height !important;
-      opacity: 1 !important;
-      height: $banner-height;
-    }
   }
 
 }
@@ -611,7 +599,8 @@ header {
 
     #receiver {
       text-align: center;
-      padding: 5px;
+      padding: 10px;
+      @extend %rale;
     }
 
     form {
